@@ -1,0 +1,7 @@
+
+DROP TABLE pub_key CASCADE;
+
+DROP TABLE key_log CASCADE;
+
+DROP TABLE user_id CASCADE;
+
