@@ -5,5 +5,8 @@ hockeypuck (0.1~alpha) UNRELEASED; urgency=low
     server.go, server_test.go, types.go:
     - Opening 0.1~alpha development, create debian/changelog.
     - Added comments to server.
+  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
+    pq/worker.go:
+    - Add a first cut at a database schema, random uuid generation.
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 01 Aug 2012 23:07:50 -0500
+ -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 01 Aug 2012 23:10:39 -0500
